--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "php": ">=8.0",
         "ext-json": "*",
         "composer-runtime-api": "^2.0",
-        "game-worker/kiri-validator": "^v2.0",
+        "game-worker/kiri-validator": "~v2.0",
         "psr/http-server-middleware": "^1.0",
         "psr/http-message": "^1.0",
         "psr/event-dispatcher": "^1.0"
